fixed stats spacing

--- a/stats-preview-card/css/style.css
+++ b/stats-preview-card/css/style.css
@@ -165,6 +165,7 @@ body {
         flex: 1;
         flex-direction: column;
         align-items: center;
+        justify-content: space-around;
         margin-top: 25px;
     }
 
